--- a/views/index.html
+++ b/views/index.html
@@ -6,8 +6,13 @@
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script type="text/javascript" src="js/kod.js"></script>
     <link rel="stylesheet" href="css/style.css" type="text/css" />
+    <!-- Add icon library -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
 
-    <title>kalwisze</title>
+    <title>tetris</title>
 
     <meta name="description" content="Opis w Google" />
     <meta name="keywords" content="słowa, kluczowe, wypisane, po, porzecinku" />
@@ -15,14 +20,18 @@
 
   <body bgcolor="black">
     <div id="container">
-      <div id="header">
-        <h1>TETRIS</h1>
+      <div><img src="img/tetris.jpg" /></div>
+      <div class="buttons">
+        <button class="btn" onclick="turn_left()"><i>left</i></button>
+        <button class="btn" onclick="changePosition()"><i>position</i></button>
+        <button class="btn" onclick="turn_right()"><i>right</i></button>
+        <button class="btn" onclick="pause()"><i>pause</i></button>
+      </div>
 
-        <input type="submit" value="left" onclick="turn_left()" />
+      <!-- <input type="submit" value="left" onclick="turn_left()" />
         <input type="submit" value="right" onclick="turn_right()" />
         <input type="submit" value="position" onclick="changePosition()" />
-        <input type="submit" value="stop" onclick="stop()" />
-      </div>
+        <input type="submit" value="stop" onclick="stop()" /> -->
 
       <div id="tetris"></div>
     </div>
