--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,7 +36,7 @@ img {
 }
 
 body {
-  background-image: url(https://cdnb.artstation.com/p/assets/images/images/038/204/477/large/samantha-stahlke-tetris-bg.jpg?1622474127);
+  background-image: url("../img/samantha-stahlke-tetris-bg.jpg");
 }
 
 .btn {
@@ -71,4 +71,23 @@ body {
   align-items: center;
   justify-content: center;
   gap: 10px;
+}
+
+#cl {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+.scores,
+.level {
+  height: 40px;
+  margin: 5px;
+}
+
+span {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 24px;
+  color: rgb(235, 235, 235);
 }
