--- a/views/index.html
+++ b/views/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <link href="https://fonts.cdnfonts.com/css/monaco" rel="stylesheet" />
+
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script type="text/javascript" src="js/kod.js"></script>
     <link rel="stylesheet" href="css/style.css" type="text/css" />
@@ -27,12 +29,10 @@
         <button class="btn" onclick="turn_right()"><i>right</i></button>
         <button class="btn" onclick="pause()"><i>pause</i></button>
       </div>
-
-      <!-- <input type="submit" value="left" onclick="turn_left()" />
-        <input type="submit" value="right" onclick="turn_right()" />
-        <input type="submit" value="position" onclick="changePosition()" />
-        <input type="submit" value="stop" onclick="stop()" /> -->
-
+      <div id="cl">
+        <div class="scores"><span>am scores</span></div>
+        <div class="level"><span>am level</span></div>
+      </div>
       <div id="tetris"></div>
     </div>
   </body>
